2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-10  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the HTTP 1.0 response

2014-01-18  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Addressed homework 1 review comments

2014-01-19  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added homework 2 code
 * test_server.py: Added tests for homework 2

2014-01-26  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added homework 3 code
 * test_server.py: Added tests for homework 3

2014-01-30  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * test_server.py: Fixed name of one of the test methods

2014-01-30  Matheus Araujo <araujoma@cse.msu.edu>

 * Really Good code, could improve with main() and get_submit() tests

2014-01-31  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the error page
 * test_server.py: Added the test for the error page

2014-02-04  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the recv() functionality
 * test_server.py: Altered the tests to work with the templates

2014-02-06  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the multipart post stuff
 * test_server.py: Altered the tests to work with the new stuff

2014-02-09  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Removed from hw5
 * test_server.py: Removed from hw5
 * ref-server.py: Added for hw5
 * app.py: Started on for hw5
 * test_app.py: Started on for hw5

2014-02-11  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * app.py: Added the encoding line for template rendering
 * added the s2.html template for posts

2014-02-12  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * app.py: Fixed the post part

2014-02-12  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added it back with hw5 changes and socketmodule
 * test_server.py: Added it back with main() test
